--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  html * {
+    font-family: system-ui, sans-serif;
+    font-weight: 800;
+    color: red;
+  }
+
+  h1 {
+    @apply text-7xl;
+  }
+}
 
 .component-container {
   border: 1px solid black;
