map renders onload, current location can be accessed -> next step is autocomplete and sending map center to database

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,3 +14,9 @@
 .component-container {
   border: 1px solid black;
 }
+
+.map-style {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+}
