--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,12 +11,15 @@
   }
 }
 
-.component-container {
-  /* border: 1px solid black; */
-}
-
 .map-style {
   display: flex;
   justify-content: center;
   padding-top: 30px;
+}
+
+.image-track > .image {
+  width: 40vmin;
+  height: 56vmin;
+  object-fit: cover;
+  object-position: center;
 }
